--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ControlKotlinActivity"
-                  android:label="ControlKotlinActivity"></activity>
+        <activity android:name=".JavaTest"></activity>
+        <activity android:name=".Person" />
+        <activity android:name=".PersonJava" />
+        <activity
+            android:name=".ControlKotlinActivity"
+            android:label="ControlKotlinActivity" />
         <activity
             android:name=".VariableKotlinActivity"
             android:label="VariableKotlinActivity" />
